fix wrap main

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,10 @@
         margin: 10px 0px;
     }
 
+    .album_recenti, .album_creati, .album_popolari{
+        flex-wrap: wrap;
+    }
+
     .contenuto img{
         width: 150px;
     }
